# lr_module_scratch

./: .gitignore  README.md  pyproject.toml  validation.yaml
.github/workflows/: check_test.yaml
data/: firing_pin_impression.csv
lrmodule/: __init__.py  determine_lr.py  helpers.py  input_data.py  lrsystem.py  mcmc.py  persistence.py
lrmodule/resources/: lrsystem_firing_pin_impression_accf.yaml
tests/: conftest.py  test_data.py  test_input_data.py  test_lrsystem.py  test_persistence.py  test_validation_yaml.py
tests/characterization_test/: characterization_test.py
tests/characterization_test/expected_llr_output/: aperture_shear-ccf-subset.csv
tests/mcmc_matlab_comparison/: config.yaml  test_mcmc.py
tests/test_model_storage/firing_pin_impression/accf/: model.pkl
