[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lr_module_scratch"
description = "Package for providing the LR module for Scratch."
dynamic = ["version"]
authors = [
    {name = "Netherlands Forensics Institute", email = "netherlandsforensicinstitute@users.noreply.github.com"}, ]
requires-python = ">=3.13, <3.14"  # `pytensor` (required by `pymc` doesn't support python 3.14 yet)
readme = "README.md"
license = {text = "Apache Software License 2.0"}
dependencies = ["lir==1.1.0", "pandas>=2.3.3", "arviz>=0.22.0", "pymc>=5.26.1"]

[project.urls]
homepage = "https://github.com/NetherlandsForensicInstitute/lr_module_scratch/"

[dependency-groups]
dev = [
    "pytest==8.4.2",  # `pytest-testmon` currently only supports `pytest<9`
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
    "coverage>=7.11.3",
    "pytest-testmon>=2.1.4",
]

[tool.pdm]
version = {source = "scm"}

[tool.pdm.scripts]
all = {composite = ["check", "test"]}
all_with_quicktest = {composite = ["check", "quicktest"]}
check = {composite = ["lint", "format-check", "check-static"]}
all-fix = {composite = ["check-quality", "test"]}

check-quality = {composite = ["lint-fix", "format-check", "format-fix"]}
check-static = "pdm run ty check"

lint = "ruff check lrmodule/"
lint-fix = "ruff check --fix lrmodule/"

format-check = "ruff format --diff lrmodule/"
format-fix = "ruff format lrmodule/"

# If no args are given to 'test', this will run as if '{args}' is an empty string.
test = "coverage run --branch --source lir --module pytest --strict-markers tests/ {args}"
quicktest = {composite = ["test --testmon"]}


# Following Scratch conventions on linting, type hinting, etc.
[tool.ruff]
line-length = 120
target-version = "py313"
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
  "I",   # isort
  "NPY", # numpy specific rules
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "N",   # pep8-naming
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "PL",  # pylint
  "S",   # flake8-bandit
  "PT",  # flake8-pytest-style
]
ignore = [
  'D100',    # no module docstring required at top of each file
  'D101',    # no class docstring required (only in __init__)
  'D104',    # no docstring in __init__.py of public package required
  'D105',    # no docstring in magic methods (like __eq__) required, since they are not class dependent
  'PLE0604', # no restriction on having only strings in __all__ definitions
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"            # docstring type to use
ignore-decorators = ["property"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "S101",  # Exclude the 'use of assert' warning in the test files
  "D103",  # No docstring necessary for tests
  "PT011", # No `match` parameter necessary for pytest.raises
]

[tool.ty.environment]
python-version = "3.13"
